# sage-diff

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
docs/: api.rst  examples.rst  index.rst  mathematical_method.rst
src/sage_diff/: __init__.py  core.py  ode.py
src/sage_diff/linear_systems/: __init__.py  algebra.py  builder.py  first_integrals.py  models.py  spectrum.py
src/sage_diff/linear_systems/formulas/: __init__.py  complex.py  jordan.py  real.py
tests/: test_first_integrals.py  test_ode.py  test_public_exports.py
